var searchData=
[
  ['receiver_0',['receiver',['../struct_election_partial_key_pair_backup_proto.html#ab1bd41f8a3c1fa128b4d1b3b381771f3',1,'ElectionPartialKeyPairBackupProto::receiver'],['../struct_election_partial_key_verification_proto.html#ab40fa251658efe9e86e4a0e812bc89a8',1,'ElectionPartialKeyVerificationProto::receiver'],['../struct_election_partial_key_pair_backup.html#a12d38e5caf2119069346ea1981995b91',1,'ElectionPartialKeyPairBackup::receiver'],['../struct_election_partial_key_verification.html#ad10edd54ef4b3f0b36403bc333289e15',1,'ElectionPartialKeyVerification::receiver']]],
  ['response_1',['response',['../struct_schnorr_proof_proto.html#a9dfdb6e5ed7d0dbb05bdf1a70e04a0cd',1,'SchnorrProofProto::response'],['../struct_schnorr_proof.html#a6efa7809e247e867d2b9a8ea777513a6',1,'SchnorrProof::response'],['../struct_chaum_pedersen_proof.html#a01c4abf73d90ab6547e4d8f3f6f3b27c',1,'ChaumPedersenProof::response']]]
];
