var searchData=
[
  ['data_0',['data',['../struct_hashed_el_gamal_ciphertext_proto.html#a3fedc00d4db1d3b03512873432c8e4bc',1,'HashedElGamalCiphertextProto::data'],['../struct_hashed_el_gamal_ciphertext.html#a7e4928e1981cbd116b4c500e3c36c5f1',1,'HashedElGamalCiphertext::data'],['../struct_chaum_pedersen_proof.html#afc562429d5008075c91913a34508c929',1,'ChaumPedersenProof::data']]],
  ['debug_5fwolfssl_5fmalloc_1',['DEBUG_WOLFSSL_MALLOC',['../user__settings_8h.html#a3ed984820594ccd64e4cb5c6556fa117',1,'user_settings.h']]],
  ['decryption_2',['decryption',['../struct_ciphertext_decryption_selection_proto.html#a7e81dc160e5999673598163c764cede7',1,'CiphertextDecryptionSelectionProto::decryption'],['../struct_ciphertext_decryption_selection.html#aa8897901c56b87cba55a76122feb590e',1,'CiphertextDecryptionSelection::decryption']]],
  ['decryption_5fshare_5fproto_5f_5fdescriptor_3',['decryption_share_proto__descriptor',['../tally_8pb-c_8h.html#a4a33bec87d7695aac46c34b33b79d163',1,'decryption_share_proto__descriptor:&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a4a33bec87d7695aac46c34b33b79d163',1,'decryption_share_proto__descriptor:&#160;tally.pb-c.c']]],
  ['decryption_5fshare_5fproto_5f_5ffree_5funpacked_4',['decryption_share_proto__free_unpacked',['../tally_8pb-c_8h.html#a5436f718e7afe8e0317225081adaf78c',1,'decryption_share_proto__free_unpacked(DecryptionShareProto *message, ProtobufCAllocator *allocator):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a5436f718e7afe8e0317225081adaf78c',1,'decryption_share_proto__free_unpacked(DecryptionShareProto *message, ProtobufCAllocator *allocator):&#160;tally.pb-c.c']]],
  ['decryption_5fshare_5fproto_5f_5fget_5fpacked_5fsize_5',['decryption_share_proto__get_packed_size',['../tally_8pb-c_8h.html#a909436f7c61a8d15e7b067c4bb05acf1',1,'decryption_share_proto__get_packed_size(const DecryptionShareProto *message):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a909436f7c61a8d15e7b067c4bb05acf1',1,'decryption_share_proto__get_packed_size(const DecryptionShareProto *message):&#160;tally.pb-c.c']]],
  ['decryption_5fshare_5fproto_5f_5finit_6',['DECRYPTION_SHARE_PROTO__INIT',['../tally_8pb-c_8h.html#ad0fbebd99ea7869d25b08cbdc6567c41',1,'tally.pb-c.h']]],
  ['decryption_5fshare_5fproto_5f_5finit_7',['decryption_share_proto__init',['../tally_8pb-c_8h.html#a3cbf1353176fb486d31051437d523fa4',1,'decryption_share_proto__init(DecryptionShareProto *message):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a3cbf1353176fb486d31051437d523fa4',1,'decryption_share_proto__init(DecryptionShareProto *message):&#160;tally.pb-c.c']]],
  ['decryption_5fshare_5fproto_5f_5fpack_8',['decryption_share_proto__pack',['../tally_8pb-c_8h.html#a84d2aa1ce7dfddfa62a1d5018322fce2',1,'decryption_share_proto__pack(const DecryptionShareProto *message, uint8_t *out):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a84d2aa1ce7dfddfa62a1d5018322fce2',1,'decryption_share_proto__pack(const DecryptionShareProto *message, uint8_t *out):&#160;tally.pb-c.c']]],
  ['decryption_5fshare_5fproto_5f_5fpack_5fto_5fbuffer_9',['decryption_share_proto__pack_to_buffer',['../tally_8pb-c_8h.html#a3890c5ac978a8010dbd3d7688dc04481',1,'decryption_share_proto__pack_to_buffer(const DecryptionShareProto *message, ProtobufCBuffer *buffer):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a3890c5ac978a8010dbd3d7688dc04481',1,'decryption_share_proto__pack_to_buffer(const DecryptionShareProto *message, ProtobufCBuffer *buffer):&#160;tally.pb-c.c']]],
  ['decryption_5fshare_5fproto_5f_5funpack_10',['decryption_share_proto__unpack',['../tally_8pb-c_8h.html#a83bc05e84586a62e348f039765905c91',1,'decryption_share_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a83bc05e84586a62e348f039765905c91',1,'decryption_share_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;tally.pb-c.c']]],
  ['decryptionshare_11',['DecryptionShare',['../struct_decryption_share.html',1,'']]],
  ['decryptionshareproto_12',['DecryptionShareProto',['../struct_decryption_share_proto.html',1,'DecryptionShareProto'],['../tally_8pb-c_8h.html#a8e54c4d5a77bdc310aaa1da25df9477c',1,'DecryptionShareProto:&#160;tally.pb-c.h']]],
  ['decryptionshareproto_5fclosure_13',['DecryptionShareProto_Closure',['../tally_8pb-c_8h.html#a3653f5d4b9b444a6c20b8d9650796252',1,'tally.pb-c.h']]],
  ['delete_5fbackup_14',['delete_backup',['../adapter_8c.html#a32bf22ab07aebd66af1381f5b47245b2',1,'adapter.c']]],
  ['delete_5fkey_5fpair_15',['delete_key_pair',['../adapter_8c.html#afaec079fab6e3f1bda45aaf55eb6f706',1,'adapter.c']]],
  ['description_5fhash_16',['description_hash',['../struct_ciphertext_tally_contest_proto.html#a5ccc37c39cfa54dccf93e49ea8fbecc7',1,'CiphertextTallyContestProto::description_hash'],['../struct_ciphertext_decryption_contest_proto.html#af0f829630c57308f6a7941ede9357785',1,'CiphertextDecryptionContestProto::description_hash'],['../struct_ciphertext_tally_contest.html#a308e482ecc315c31e4b8c08d6959350b',1,'CiphertextTallyContest::description_hash'],['../struct_ciphertext_decryption_contest.html#aa59c950c8fb4e33c189d84f98f20930e',1,'CiphertextDecryptionContest::description_hash']]],
  ['deserialize_5fciphertext_5ftally_17',['deserialize_ciphertext_tally',['../serialize_8h.html#a7b87bf0665e828281a232cd2429ae5b9',1,'deserialize_ciphertext_tally(uint8_t *buffer, unsigned len, CiphertextTally *ciphertally):&#160;serialize.c'],['../serialize_8c.html#a7b87bf0665e828281a232cd2429ae5b9',1,'deserialize_ciphertext_tally(uint8_t *buffer, unsigned len, CiphertextTally *ciphertally):&#160;serialize.c']]],
  ['deserialize_5felection_5fkey_5fpair_18',['deserialize_election_key_pair',['../serialize_8h.html#a46061ba0e4207cf2cc96df4d4c90d944',1,'deserialize_election_key_pair(uint8_t *buffer, unsigned len, ElectionKeyPair *key_pair):&#160;serialize.c'],['../serialize_8c.html#a46061ba0e4207cf2cc96df4d4c90d944',1,'deserialize_election_key_pair(uint8_t *buffer, unsigned len, ElectionKeyPair *key_pair):&#160;serialize.c']]],
  ['deserialize_5felection_5fpartial_5fkey_5fbackup_19',['deserialize_election_partial_key_backup',['../serialize_8h.html#ae92aa5f7f2e3a5be5d314fd4456e9707',1,'deserialize_election_partial_key_backup(uint8_t *buffer, unsigned len, ElectionPartialKeyPairBackup *backup):&#160;serialize.c'],['../serialize_8c.html#ae92aa5f7f2e3a5be5d314fd4456e9707',1,'deserialize_election_partial_key_backup(uint8_t *buffer, unsigned len, ElectionPartialKeyPairBackup *backup):&#160;serialize.c']]],
  ['deserialize_5felection_5fpartial_5fkey_5fverification_20',['deserialize_election_partial_key_verification',['../serialize_8h.html#ac20766373ee00f826f335039590ce08f',1,'deserialize_election_partial_key_verification(uint8_t *buffer, unsigned len, ElectionPartialKeyVerification *verification):&#160;serialize.c'],['../serialize_8c.html#ac20766373ee00f826f335039590ce08f',1,'deserialize_election_partial_key_verification(uint8_t *buffer, unsigned len, ElectionPartialKeyVerification *verification):&#160;serialize.c']]]
];
