var searchData=
[
  ['data_0',['data',['../struct_hashed_el_gamal_ciphertext_proto.html#a3fedc00d4db1d3b03512873432c8e4bc',1,'HashedElGamalCiphertextProto::data'],['../struct_hashed_el_gamal_ciphertext.html#a7e4928e1981cbd116b4c500e3c36c5f1',1,'HashedElGamalCiphertext::data'],['../struct_chaum_pedersen_proof.html#afc562429d5008075c91913a34508c929',1,'ChaumPedersenProof::data']]],
  ['decryption_1',['decryption',['../struct_ciphertext_decryption_selection_proto.html#a7e81dc160e5999673598163c764cede7',1,'CiphertextDecryptionSelectionProto::decryption'],['../struct_ciphertext_decryption_selection.html#aa8897901c56b87cba55a76122feb590e',1,'CiphertextDecryptionSelection::decryption']]],
  ['decryption_5fshare_5fproto_5f_5fdescriptor_2',['decryption_share_proto__descriptor',['../tally_8pb-c_8h.html#a4a33bec87d7695aac46c34b33b79d163',1,'decryption_share_proto__descriptor:&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a4a33bec87d7695aac46c34b33b79d163',1,'decryption_share_proto__descriptor:&#160;tally.pb-c.c']]],
  ['description_5fhash_3',['description_hash',['../struct_ciphertext_tally_contest_proto.html#a5ccc37c39cfa54dccf93e49ea8fbecc7',1,'CiphertextTallyContestProto::description_hash'],['../struct_ciphertext_decryption_contest_proto.html#af0f829630c57308f6a7941ede9357785',1,'CiphertextDecryptionContestProto::description_hash'],['../struct_ciphertext_tally_contest.html#a308e482ecc315c31e4b8c08d6959350b',1,'CiphertextTallyContest::description_hash'],['../struct_ciphertext_decryption_contest.html#aa59c950c8fb4e33c189d84f98f20930e',1,'CiphertextDecryptionContest::description_hash']]]
];
