var searchData=
[
  ['p_5f3072_0',['p_3072',['../constants_8c.html#aea10fa29a37974dd31a360c893e2ec72',1,'p_3072:&#160;constants.c'],['../constants_8h.html#a10e57212c03d00664077fefb6ff21c7f',1,'p_3072:&#160;constants.c']]],
  ['pad_1',['pad',['../struct_hashed_el_gamal_ciphertext_proto.html#a231bb562171c488da6ab588afdee6972',1,'HashedElGamalCiphertextProto::pad'],['../struct_hashed_el_gamal_ciphertext.html#afcec436515073c378d5f114256ea8759',1,'HashedElGamalCiphertext::pad'],['../struct_chaum_pedersen_proof.html#a2f09958fb8824c87312d45ae84eb0ca1',1,'ChaumPedersenProof::pad']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5fdescriptor_2',['plaintext_ballot_contest_proto__descriptor',['../ballot_8pb-c_8c.html#a9f9957483ed0c6f1ca992e57aebbad24',1,'plaintext_ballot_contest_proto__descriptor:&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a9f9957483ed0c6f1ca992e57aebbad24',1,'plaintext_ballot_contest_proto__descriptor:&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5fdescriptor_3',['plaintext_ballot_proto__descriptor',['../ballot_8pb-c_8c.html#a47bf39346e779edc3ce3631d62b4da94',1,'plaintext_ballot_proto__descriptor:&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a47bf39346e779edc3ce3631d62b4da94',1,'plaintext_ballot_proto__descriptor:&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5fdescriptor_4',['plaintext_ballot_selection_proto__descriptor',['../ballot_8pb-c_8c.html#a68990fb3122ca33b5430708b5216f827',1,'plaintext_ballot_selection_proto__descriptor:&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a68990fb3122ca33b5430708b5216f827',1,'plaintext_ballot_selection_proto__descriptor:&#160;ballot.pb-c.c']]],
  ['polynomial_5',['polynomial',['../struct_election_key_pair_proto.html#ae18024bc22176477c5502cb73ae0b0e6',1,'ElectionKeyPairProto::polynomial'],['../struct_election_key_pair.html#abcc22da6a75bc154b6500318f24bfc24',1,'ElectionKeyPair::polynomial']]],
  ['private_5fkey_6',['private_key',['../struct_election_key_pair_proto.html#aa41be550199177c0889b18410b1d2e62',1,'ElectionKeyPairProto::private_key'],['../struct_election_key_pair.html#a827431978f82f678e3f32bb7c2d44fac',1,'ElectionKeyPair::private_key']]],
  ['proof_7',['proof',['../struct_coefficient_proto.html#a56f3d71eeec34524890a3c290d13cfc3',1,'CoefficientProto::proof'],['../struct_coefficient.html#a181df43574913a3afc874f866f80e784',1,'Coefficient::proof'],['../struct_ciphertext_decryption_selection.html#a9de32c2ef492c8eeeaad468eee106a87',1,'CiphertextDecryptionSelection::proof']]],
  ['proof_5fchallenge_8',['proof_challenge',['../struct_ciphertext_decryption_selection_proto.html#ab6a81eb27d5631f0d6d2b20f6e84bf28',1,'CiphertextDecryptionSelectionProto']]],
  ['proof_5fdata_9',['proof_data',['../struct_ciphertext_decryption_selection_proto.html#ac1bc533cb699b528377050c86524d330',1,'CiphertextDecryptionSelectionProto']]],
  ['proof_5fpad_10',['proof_pad',['../struct_ciphertext_decryption_selection_proto.html#acc172a86710975b1a65edec860614a73',1,'CiphertextDecryptionSelectionProto']]],
  ['proof_5fresponse_11',['proof_response',['../struct_ciphertext_decryption_selection_proto.html#a86efb618f025c4594c7dfcd256a65f6c',1,'CiphertextDecryptionSelectionProto']]],
  ['pubkey_12',['pubkey',['../struct_schnorr_proof_proto.html#a4e08bac0b5be050c12f7257bfb00c9ba',1,'SchnorrProofProto::pubkey'],['../struct_schnorr_proof.html#a8a65b2e8eba8b86965afbe5db93d4005',1,'SchnorrProof::pubkey']]],
  ['pubkey_5fcount_13',['pubkey_count',['../adapter_8c.html#a7d8099b54acfbfa5c26352d9167cc50d',1,'adapter.c']]],
  ['pubkey_5fmap_14',['pubkey_map',['../adapter_8c.html#ab8b086fa271490586e2074c2f20ebda8',1,'adapter.c']]],
  ['public_5fkey_15',['public_key',['../struct_election_key_pair_proto.html#a6fffde7ae860fecbe69e3883e69db2f9',1,'ElectionKeyPairProto::public_key'],['../struct_decryption_share_proto.html#a455c8324236075b5d2ddc2ea096fd2aa',1,'DecryptionShareProto::public_key'],['../struct_election_key_pair.html#a8a425e105922d050867cba9cef32e967',1,'ElectionKeyPair::public_key'],['../struct_ciphertext_decryption_contest.html#a7518ccc1c8449f90b76b804e6c3bcc95',1,'CiphertextDecryptionContest::public_key'],['../struct_decryption_share.html#a8e38297844ea30b76d3796c8e071dd42',1,'DecryptionShare::public_key']]]
];
